WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30574
[Qt] Qt browsers fail test LayoutTests/fast/history/clicked-link-is-visited.html
https://bugs.webkit.org/show_bug.cgi?id=30574
Summary
[Qt] Qt browsers fail test LayoutTests/fast/history/clicked-link-is-visited.html
Chang Shu
Reported
2009-10-20 09:10:43 PDT
run LayoutTests/fast/history/clicked-link-is-visited.html with QtLauncher. expected result: "this link" should be shown in visited color actual result: "this link" does not show visited color
Attachments
fix patch
(3.07 KB, patch)
2009-10-20 10:12 PDT
,
Chang Shu
eric
: review-
Details
Formatted Diff
Diff
patch after dependency resolved
(3.54 KB, patch)
2009-10-21 13:59 PDT
,
Chang Shu
eric
: review-
Details
Formatted Diff
Diff
put expected result in platform/qt
(3.67 KB, patch)
2009-10-22 06:49 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2009-10-20 10:12:21 PDT
Created
attachment 41510
[details]
fix patch Two things probably can be discussed: 1. The expected text file is added to common folder. This may affect the test result for GTK, win platform (Mac has its own expected results). 2. The default color #551A8B is expected. Is this consistent on all platforms? Shall we set the visited color in the test case so as to make result consistent? Thanks!
Eric Seidel (no email)
Comment 2
2009-10-20 11:49:33 PDT
Comment on
attachment 41510
[details]
fix patch Looks wrong. You're adding commented out code. +CONSOLE MESSAGE: line 6: TypeError: Result of expression 'layoutTestController.keepWebHistory' [undefined] is not a function. is wrong too.
Chang Shu
Comment 3
2009-10-20 11:54:11 PDT
(In reply to
comment #2
)
> (From update of
attachment 41510
[details]
) > Looks wrong. You're adding commented out code.
Sorry, I accidentally added the comment sign. Will remove it.
> > +CONSOLE MESSAGE: line 6: TypeError: Result of expression > 'layoutTestController.keepWebHistory' [undefined] is not a function. > > is wrong too.
This is existing code. Would it be possible that your workspace is out of date?
Chang Shu
Comment 4
2009-10-20 11:57:42 PDT
(In reply to
comment #3
)
> (In reply to
comment #2
) > > (From update of
attachment 41510
[details]
[details]) > > Looks wrong. You're adding commented out code. > > Sorry, I accidentally added the comment sign. Will remove it. > > > > > +CONSOLE MESSAGE: line 6: TypeError: Result of expression > > 'layoutTestController.keepWebHistory' [undefined] is not a function. > > > > is wrong too. > This is existing code. Would it be possible that your workspace is out of date?
Wow, it is in my workspace. will double-check.
Chang Shu
Comment 5
2009-10-20 13:00:15 PDT
> > > +CONSOLE MESSAGE: line 6: TypeError: Result of expression > > > 'layoutTestController.keepWebHistory' [undefined] is not a function. > > > > > > is wrong too. > > This is existing code. Would it be possible that your workspace is out of date? > > Wow, it is in my workspace. will double-check.
layoutTestController.keepWebHistory is missing on Qt. Just logged a
bug 30592
and patched it with dummy implementation.
Chang Shu
Comment 6
2009-10-21 13:59:59 PDT
Created
attachment 41610
[details]
patch after dependency resolved
Eric Seidel (no email)
Comment 7
2009-10-21 15:53:56 PDT
Comment on
attachment 41610
[details]
patch after dependency resolved The results don't go there I don't think. I expect the results for this test are per-platform. They probably should not be per-platform, but that would require changing the test. For now, you should probably just check in the results to platform/qt
Chang Shu
Comment 8
2009-10-22 06:49:58 PDT
Created
attachment 41656
[details]
put expected result in platform/qt
Eric Seidel (no email)
Comment 9
2009-10-22 11:43:31 PDT
Comment on
attachment 41656
[details]
put expected result in platform/qt OK. Looks sane.
WebKit Commit Bot
Comment 10
2009-10-22 13:02:31 PDT
Comment on
attachment 41656
[details]
put expected result in platform/qt Rejecting patch 41656 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11475 test cases. inspector/console-tests.html -> failed Exiting early after 1 failures. 9209 tests run. 302.35s total testing time 9208 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 5 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 11
2009-10-22 14:19:30 PDT
Comment on
attachment 41656
[details]
put expected result in platform/qt I filed
bug 30691
.
WebKit Commit Bot
Comment 12
2009-10-22 14:33:06 PDT
Comment on
attachment 41656
[details]
put expected result in platform/qt Clearing flags on attachment: 41656 Committed
r49957
: <
http://trac.webkit.org/changeset/49957
>
WebKit Commit Bot
Comment 13
2009-10-22 14:33:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug