2009-10-22  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Eric Seidel.

        [Qt] Added expected result for clicked-link-is-visited.html.
        Removed test case from qt/Skipped as it works now.

        * platform/qt/Skipped:
        * platform/qt/fast/history: Added.
        * platform/qt/fast/history/clicked-link-is-visited-expected.txt: Added.
2009-10-22  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Eric Seidel.

        [Qt] Enable track visited links in QWebPage
        https://bugs.webkit.org/show_bug.cgi?id=30574

        Test: fast/history/clicked-link-is-visited.html

        * Api/qwebpage.cpp:
        (QWebPagePrivate::QWebPagePrivate):

Canonical link: https://commits.webkit.org/41411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49957 268f45cc-cd09-0410-ab3c-d52691b4dbfc